--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -1,6 +1,8 @@
 @import url("https://fonts.googleapis.com/css?family=Roboto+Condensed&display=swap");
 @import url("https://fonts.googleapis.com/css?family=Varela+Round&display=swap");
 @import url("https://fonts.googleapis.com/css?family=Lora&display=swap");
+@import url("https://fonts.googleapis.com/css?family=Montserrat&display=swap");
+@import url("https://fonts.googleapis.com/css?family=Lora&display=swap");
 body {
   background-color: #f4f5f6;
   color: #333;
@@ -18,9 +20,17 @@ body {
   }
 }
 
+@media screen and (min-width: 768px) {
+  h5 {
+    font-size: 20px;
+    line-height: 20px;
+  }
+}
+
 .container-fluid,
 .container {
   max-width: 1310px;
+  padding-top: 20px;
 }
 
 .nav-top-container {
@@ -148,25 +158,19 @@ body {
     padding-bottom: 13px;
   }
 }
+/* Start of the main section */
 
-/* main section styling */
-
-@media screen and (min-width: 992px) {
-  .container-fluid {
-    padding-left: 30px;
-    padding-right: 30px;
-  }
-}
-
-/* Start of the main section styling */
-.top-stories-container {
-  height: 400px;
+/* FEATURED STORIES SECTION STYLING */
+.block-title {
+  color: rgba(3, 3, 3, 0.4);
+  text-transform: uppercase;
+  font: bold 16px/16px "Roboto Condensed", sans-serif;
+  padding-bottom: 11px;
 }
 
 .category {
-  display: block;
   font: bold 17px/16px "Roboto Condensed", sans-serif;
-  text-transform: uppercase;
+  color: #f72210;
   padding: 8px 15px 9px;
   background-color: rgba(255, 255, 255, 0.9);
   bottom: 0;
@@ -174,252 +178,156 @@ body {
   z-index: 1;
 }
 
-.culture-stories-container {
-  background-color: #f4f5f7;
-  margin-bottom: 20px;
-}
-.news-description {
+h1 h2 h3 h3 h4 h5 h6 {
   font-family: "Roboto Condensed", sans-serif;
-  margin-bottom: 10px;
-  position: relative;
+  color: black;
 }
 
-.news-description > a {
-  color: black;
-  /* text-decoration-color: rgb(247, 34, 16); */
-  /* text-decoration-line: underline; */
-  font-size: 22px;
+.news-headline {
+  font-weight: bold;
+  font-weight: 700px;
+  font-size: 24px;
   line-height: 24px;
-  font-family: "Roboto Condensed", sans-serif;
-}
-
-.category > a {
-  color: #f72210;
-}
-
-.summery {
-  color: rgb(51, 51, 51);
-  font-family: "Varela Round", sans-serif;
-  line-height: 18px;
-  overflow-x: hidden;
-}
-.article-image {
-  margin-right: 15px;
-}
-
-.feature-2 article {
-  border-top: 1px solid #ddd;
-  padding: 14px 0;
-}
-.feature-2 h4 {
-  font-size: 17px;
-  letter-spacing: 2px;
-  line-height: 20px;
-  margin-bottom: 10px;
-  font: bolder 16px/16px "Roboto Condensed", sans-serif;
-}
-
-.feature-2 h4 > a {
   color: black;
 }
 
-.block-title {
-  color: rgba(3, 3, 3, 0.4);
-  text-transform: uppercase;
-  font: bold 16px/16px "Roboto Condensed", sans-serif;
-  padding: 0 0 11px 0;
+.sponsor-color {
+  color: #3581f4;
 }
 
-.info {
-  padding: 15px 10px 20px;
+.summary {
+  overflow-x: hidden;
+  font-family: "Montserrat", sans-serif;
 }
 
-.title {
-  color: #272727;
-  font: 20px/22px "Lora", serif;
-  margin-bottom: 10px;
+.culture-container {
+  background-color: #f4f5f7;
+  /* margin-bottom: 20px; */
+  margin: 0 15px 20px;
 }
 
-.title a {
-  color: rgb(39, 39, 39);
-}
-
-.section-summary {
-  font: 15px/20px "Helvetica Neue", "Helvetica", Arial, sans-serif;
+.culture-container .summary {
   color: rgba(39, 39, 39, 0.5);
   margin-bottom: 10px;
 }
 
+.culture-container .news-headline {
+  font: 20px/22px "Lora", serif;
+  color: #272727;
+}
+
+.tags {
+  font: 300 13px/20px "Montserrat", sans-serif;
+  color: #272727;
+}
+
 .tags a {
-  display: inline-block;
   background-color: #c2d4d7;
   padding-left: 6px;
   padding-right: 6px;
   margin-right: 6px;
   margin-bottom: 6px;
-  color: rgb(83, 83, 83);
 }
 
-.news-insights {
-  width: 100%;
+.more-stories-container .news-headline {
+  font-size: 17px;
+  line-height: 20px;
 }
 
-.lk-gray {
-  display: block;
-  background-color: #f4f5f6;
-  color: black;
-  font: bold 18px/18px "Roboto Condensed", sans-serif;
+/* opinion section styling */
+
+.byline {
+  font-size: 14px;
+  line-height: 21px;
+  color: #555;
   text-transform: uppercase;
+  margin-top: 4px;
+  font-family: "Roboto Condensed", sans-serif;
 }
 
-/* doesnt work as we speak */
-.lk-gray::after {
-  content: "";
-  background-image: url(https://g.newsweek.com/www/images/icon-arrow-right-black.svg);
-  width: 8px;
-  height: 14px;
-  fill: black;
-  margin-left: 10px;
-  background: url(https://g.newsweek.com/www/images/icon-arrow-right.svg)
-    center/contain no-repeat;
+.opinion-title {
+  font-size: 17px;
+  font-family: "Roboto Condensed", sans-serif;
+}
+
+.latest-image {
+  width: 135px;
+  margin-right: 15px;
+}
+
+.sticky {
+  position: sticky;
+  top: 7.25rem;
+  height: 100vh;
+}
+
+@media (max-width: 768px) {
+  .latest-image {
+    width: 258px;
+  }
+}
+
+@media (max-width: 478px) {
+  .latest-image {
+    width: 135px;
+  }
+}
+
+/* magazine  */
+
+.mag-title {
+  font: bold 19px/19px "Roboto Condensed", sans-serif;
+  margin-bottom: 15px;
+  border-bottom: 1px solid #d9d9d9;
+  padding-bottom: 8px;
+  font-weight: 700;
 }
 
 .icon-n {
+  display: block;
   width: 29px;
   height: 28px;
   background: url(https://g.newsweek.com/www/images/logo-n1.svg) center/contain
     no-repeat #f72210;
   margin-right: 10px;
+  border-bottom: 1px solid #d9d9d9;
+  padding-bottom: 8px;
 }
 
-.in-the-magazine {
-  font: bold 19px/19px "Roboto Condensed", sans-serif;
-  margin-bottom: 15px;
-  margin-top: 30px;
-}
-
-.category {
+.category-two {
   font: bold 16px/26px "Roboto Condensed", sans-serif;
   color: #f72210;
+  text-transform: uppercase;
   margin-top: 10px;
   margin-bottom: 10px;
 }
 
-.mag-cat {
-  padding: 3px 7px;
+.mag-cat-two {
+  padding: 0 7px;
   background-color: #f72210;
   color: white;
   margin-right: 7px;
 }
 
-.cat a {
-  color: #f72210;
-}
-
-.magazine-container h5 {
-  margin-bottom: 30px;
-  font-size: 16px;
-  color: black;
-  font-weight: bold;
-  line-height: 16px;
-  font-family: "Roboto Condensed", sans-serif;
-}
-
-.futured-after {
-  border-bottom: 1px solid #d9d9d9;
-  padding-bottom: 12px;
-  margin-bottom: 15px;
-}
-
-.futured-after > span::after {
-  border-bottom: 3px solid red;
-  border-right: 3px solid red;
-  display: block;
-  content: "";
-  width: 26px;
-  height: 25px;
-  position: absolute;
-  bottom: -4px;
-  right: -4px;
-}
-
-.count-link {
-  width: 70px;
-  height: 52px;
-  display: block;
-  bottom: 0;
-  left: 0;
-  font-weight: bold;
+.magazine .news-headline {
   font-size: 20px;
-  line-height: 58px;
-  text-indent: 5px;
+}
+
+.bg-shallow-gray {
+  background-color: #f4f5f6;
+}
+
+.lkz {
+  display: block;
+  color: black;
+  background-color: #f4f5f6;
   text-align: center;
-  background: url(https://g.newsweek.com/themes/newsweek/images/icon-slideshows-nw.png)
-    0 0 / contain no-repeat;
-  color: #e9212e;
+  text-transform: uppercase;
+  margin-bottom: 0;
+  font: bold 16px/26px "Roboto Condensed", sans-serif;
 }
 
-.header-5 {
-  font-family: "Roboto Condensed", sans-serif;
-  margin-bottom: 10px;
-  font-size: 18px;
-  position: relative;
-  color: black;
-}
-
-.red {
-  color: #f72210;
-}
-
-.subscribe-container {
-  background-color: #f4f5f6;
-}
-
-.subscribe-container::before {
-  content: "";
-  display: block;
-  background-color: #f4f5f6;
-  height: 2px;
-  position: absolute;
-  top: 0;
-  left: -15px;
-  right: -15px;
-}
-.subscribe-block {
-  background-color: #f4f5f6;
-  padding: 24px 20px 20px;
-}
-
-.subscribe-image {
-  padding: 0 90px 13px 0;
-}
-
-.mag-thumb {
-  width: 170px;
-  height: 228px;
-}
-
-.current {
-  position: absolute;
-  top: 13px;
-  left: 80px;
-}
-
-.subscribe-info h3 {
-  line-height: 28px;
-  font-size: 20px;
-  color: black;
-  font-family: "Roboto Condensed", sans-serif;
-}
-
-.subscribe-info p {
-  font: 300 15px/21px "Helvetica Neue", Helvetica, Arial, sans-serif;
-}
-
-.lk-cont {
-  background-color: #f72210;
-}
-.lk::after {
+.lkz::after {
   content: "";
   display: inline-block;
   width: 8px;
@@ -429,73 +337,158 @@ body {
     center/contain no-repeat;
 }
 
-.fn-image {
-  height: 160px;
+.magazine .lkz::after {
+  background-image: url(https://g.newsweek.com/www/images/icon-arrow-right-black.svg);
+}
+
+.img-cont-edit {
   width: 100%;
-  background-image: url(https://d.newsweek.com/en/full/1541302/starting5-homepage.png?w=397&amp;h=265&amp;q=90&amp;f=742bce9a6f72dd8f19ba2e7fd5db06e5);
-  background-position: center center;
+  height: 250px;
+}
+
+@media (max-width: 768px) {
+  .img-cont-edit {
+    height: auto;
+    overflow: none;
+  }
+
+  .custom-img {
+    width: 100%;
+  }
+}
+
+.news-week .icon-n {
+  background: url(https://g.newsweek.com/www/images/logo-n1.svg) center/contain
+    no-repeat #f72210;
+}
+
+/* VIDEO SECTION */
+
+.featured-video,
+.featured-info {
+  background-color: black;
+}
+
+.featured-video .card {
+  background-color: black;
+}
+
+.featured-video .news-headline {
+  color: white;
+  font-family: "Roboto Condensed", sans-serif;
+}
+
+.featured-video .summery {
+  color: #c7c7c7;
+  font-size: 16px;
+  line-height: 24px;
+  color: #c6c6c6;
+  margin-bottom: 10px;
+}
+
+.summery-time {
+  font-size: 18px;
+  line-height: 18px;
+  color: #777;
+}
+
+.genericon-play {
+  background-color: #fd0100;
+  color: white;
+  position: absolute;
+  bottom: 0;
+  left: 0;
+}
+
+.max {
+  width: 100%;
+  height: 100%;
+}
+.group-vid {
+  border-top: 1px solid #ddd;
+}
+
+.figure-container {
+  /* width: 500px; */
+  /* width: 41.66666667%; */
+  flex: 2 1 auto;
+}
+.vid-back::first-child {
+  background-image: url("https://d.newsweek.com/en/full/1555350/newsweek-conversations-leslie-grossman.jpg?w=173&h=104&f=b810dcbe860058739bb5ae4114710a95");
+}
+
+.vid-back {
+  background-image: url("https://d.newsweek.com/en/full/1555351/newsweek-conversations-willem-dafoe.jpg?w=173&h=104&f=64f6b307bd86eb7c5a0a44276471bf7f");
+  display: block;
+  height: 100%;
+  background-position: center;
   background-size: cover;
   background-repeat: no-repeat;
 }
 
-footer {
-  border-top: 2px solid #f4f5f6;
-  background-color: white;
-  padding-top: 30px;
-  padding-bottom: 30px;
-}
+.small-video
 
-.brand svg {
-  fill: #f72210;
+/* .genericon {
+  text-align: center;
   display: block;
-  width: 236px;
-  height: 36px;
-  margin-right: 15px;
-  margin-bottom: 12px;
-}
-.copyright {
-  font-size: 12px;
-  line-height: 12px;
-  text-transform: uppercase;
-  color: #666;
-  margin-bottom: 12px;
-}
-
-.social {
-  color: #666;
-  margin-bottom: 12px;
-}
-
-.social li {
-  margin: 0 10px;
-}
-.social li a i {
-  height: 26px;
-  width: 26px;
-}
-
-.footer-links {
-  display: flex;
-  flex-wrap: wrap;
-  border-top: 1px solid #d9d9d9;
-  padding-top: 6px;
-  font-size: 14px;
-  line-height: 15px;
-  color: #666;
-
-  font-family: "Roboto Condensed", sans-serif;
-}
-
-.footer-links-edition label {
-  margin-top: 6px;
-  margin-right: 15px;
-}
-
-.menu ul li a {
-  display: inline-block;
-  padding-right: 20px;
-  margin: 6px 0;
+  font-family: "Genericons";
   cursor: pointer;
-  line-height: 15px;
-  
+  bottom: 0;
+  left: 0;
+  /* background-color: white; */
+/* z-index: 400; */
+
+.genericon-play:after {
+  content: "";
+  display: table;
+  position: absolute;
+  height: 30px;
+  /* bottom: 0; */
+  background-color: blue;
+  /* right: 0; */
+  height: 1px;
+  bottom: 0;
+  border: 20px solid white;
+}
+
+.video-desc {
+  /* .feadisplay: flex;tured-video h4 { */
+  /* font-size: 18px;
+  line-height: 20px;
+  margin-bottom: 13px; */
+  color: white;
+  flex: 3;
+  /* } */
+}
+
+@media (min-width: 768px) {
+  .featured-video .news-headline {
+    font-size: 28px;
+    line-height: 32px;
+    margin-bottom: 4px;
+  }
+  .genericon-play {
+    font-size: 45px;
+    width: 53px;
+    height: 53px;
+    line-height: 53px;
+  }
+
+  .featured-video h4 {
+    font-size: 18px;
+    line-height: 20px;
+    margin-bottom: 13px;
+  }
+}
+
+@media (max-width: 768px) {
+  .video-desc {
+    margin-left: 40px;
+    font-size: 16px;
+  }
+
+  .figure-container {
+    height: 104px;
+    flex: 1 1 auto;
+  }
 }
