--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -492,3 +492,132 @@ h1 h2 h3 h3 h4 h5 h6 {
     flex: 1 1 auto;
   }
 }
+
+/* featured slideshows */
+
+.featured-shows .icon-n::after {
+  border-bottom: 3px solid red;
+  border-right: 3px solid red;
+  display: block;
+  content: "";
+  width: 26px;
+  height: 25px;
+  position: absolute;
+  bottom: -4px;
+  right: -4px;
+}
+
+.count-link {
+  width: 70px;
+  height: 52px;
+  display: block;
+  position: absolute;
+  bottom: 0;
+  left: 0;
+  font-weight: bold;
+  font-size: 20px;
+  line-height: 58px;
+  text-indent: 5px;
+  text-align: center;
+  background: url(https://g.newsweek.com/themes/newsweek/images/icon-slideshows-nw.png)
+    0 0 / contain no-repeat;
+  color: #e9212e;
+}
+
+.subscribe-block {
+  position: relative;
+  padding-top: 40px;
+}
+
+.subscribe-block::before {
+  content: "";
+  display: block;
+  background-color: #f4f5f6;
+  height: 2px;
+  position: absolute;
+  top: 0;
+  left: -15px;
+  right: -15px;
+}
+
+.lkred {
+  background-color: #f72210;
+  display: inline-block;
+  padding: 10px 10px 10px 12px;
+  color: white;
+  font: bold 18px/18px "Roboto Condensed", sans-serif;
+  text-transform: uppercase;
+}
+
+.lkred::after {
+  content: "";
+  display: inline-block;
+  width: 8px;
+  height: 14px;
+  margin-left: 10px;
+  background: url(https://g.newsweek.com/www/images/icon-arrow-right.svg)
+    center/contain no-repeat;
+}
+
+.subscribe-block .mag-thumb {
+  width: 170px;
+  height: 228px;
+}
+
+.subscribe-block .current {
+  position: absolute;
+  top: 13px;
+  left: 80px;
+}
+
+.subscibe-block .col-l {
+  background-color: #f4f5f6;
+}
+
+.red {
+  color: #f72210;
+}
+
+.subscribe-block .col-l .image {
+  position: relative;
+  padding-bottom: 13px;
+  padding-right: 90px;
+}
+
+.fn-2-image {
+  background: url("https://d.newsweek.com/en/full/1541302/starting5-homepage.png?w=397&h=265&q=90&f=742bce9a6f72dd8f19ba2e7fd5db06e5")
+    center center / cover no-repeat;
+  /* height: 100%; */
+}
+
+.f1-2-info {
+  /* height: 100%; */
+}
+
+@media screen and (max-width: 768px) {
+  .fn-2-image {
+    display: block;
+    height: 160px;
+    width: 100%;
+  }
+}
+
+@media screen and (min-width: 768px) {
+  .fn-2-image {
+    width: 191px;
+    height: 301px;
+  }
+}
+/*
+
+
+
+
+
+/* footer section */
+.page-footer {
+  border-top: 2px solid #f4f5f6;
+  background-color: white;
+  padding-top: 30px;
+  padding-bottom: 30px;
+}
